--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,12 @@
-<h2><%= t 'devise.passwords.forgot_title' %><h2>
-
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, t( 'devise.passwords.forgot_submit') %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<h2><%= t 'devise.passwords.forgot_title' %>
+  <h2>
+    <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= f.error_notification %>
+      <div class="form-inputs">
+        <%= f.input :email, required: true, autofocus: true %>
+      </div>
+      <div class="form-actions">
+        <%= f.button :submit, t( 'devise.passwords.forgot_submit') %>
+      </div>
+    <% end %>
+    <%= render "devise/shared/links" %>
