--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <style>/* Email styles need to be inline */</style>
+    <style>
+      /* Email styles need to be inline */
+    </style>
   </head>
   <body><%= yield %></body>
 </html>
