fixing minor problem with demo pages

--- a/app/views/home/demo_start.html.erb
+++ b/app/views/home/demo_start.html.erb
@@ -52,7 +52,7 @@
             </td>
             <td>
               <div hidden>
-                <%= l in_tz( date: event.close_time ), format: :datestamp %>
+                <%= l in_tz( date: event.close_date ), format: :datestamp %>
               </div>
               <%= l in_tz( date: event.close_date ), format: :tz_clarity %>
             </td>
