sorting on courses index

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,7 +2,7 @@
 <% theme_code = get_theme_code
    anonymize = get_anonymous %>
 <table data-role="table"
-  id="basicTable"
+  id="courseListingTable"
   data-column-btn-theme"<%= theme_code %>" 
   data-column-popup-theme="<%= theme_code %>" 
   data-mode="columntoggle"
