--- a/app/views/layouts/experiences.html.erb
+++ b/app/views/layouts/experiences.html.erb
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "installments_manifest" %>
+    <%= javascript_pack_tag 'application' %>
     <%= csrf_meta_tags %>
     <% working = !( @diagnosis.nil? && @reaction.nil? ) %>
   </head>
@@ -15,9 +16,9 @@
     <div data-role="page" data-theme="<%= theme_code %>">
       <div data-role="header" data-position="fixed" style="overflow:hidden;" >
         <h1 id="title_head"><%= t :title %> <%= " : " + @title unless @title.nil? %></h1>
-        <p style="font-weight:300;font-size:10px;text-align:center"><% q = Quote.get_quote %><%= raw( q.get_local_quote) %>
-          (<%= q.get_local_attribution %>)
-        </p>
+        <%= react_component "Quote", {
+          url: get_quote_path,
+          token: form_authenticity_token } %>
         <% if working %>
           <div data-role="controlgroup" data-type="horizontal" data-mini="true"
                                         class="ui-btn-right">
