--- a/app/views/candidate_lists/show.html.erb
+++ b/app/views/candidate_lists/show.html.erb
@@ -11,7 +11,7 @@
     </tr>
   </table>
   <h2><%= t 'candidate_lists.terms' %></h2>
-  <%= react_component "ConceptChips", {
+  <%= react_component "BingoBuilder", {
     url: bingo_concepts_path( @candidate_list.bingo_game.id ),
     token: form_authenticity_token } %>
   <br>
