--- a/app/views/candidate_lists/show.html.erb
+++ b/app/views/candidate_lists/show.html.erb
@@ -12,6 +12,7 @@
   </table>
   <h2><%= t 'candidate_lists.terms' %></h2>
   <%= react_component "BingoBuilder", {
-    url: bingo_concepts_path( @candidate_list.bingo_game.id ),
+    conceptsUrl: bingo_concepts_path( @candidate_list.bingo_game_id ),
+    boardUrl: board_for_game_path( @candidate_list.bingo_game_id ),
     token: form_authenticity_token } %>
   <br>
