really solid progress - now why am I duplicating my bingo cells?

--- a/app/views/candidate_lists/show.html.erb
+++ b/app/views/candidate_lists/show.html.erb
@@ -14,5 +14,6 @@
   <%= react_component "BingoBuilder", {
     conceptsUrl: bingo_concepts_path( @candidate_list.bingo_game_id ),
     boardUrl: board_for_game_path( @candidate_list.bingo_game_id ),
+    boardSaveUrl: update_board_path( @candidate_list.bingo_game_id ),
     token: form_authenticity_token } %>
   <br>
