--- a/app/assets/stylesheets/app_style.scss
+++ b/app/assets/stylesheets/app_style.scss
@@ -7,3 +7,11 @@
   font-size:10px;
   text-align:center;
 }
+
+.mt4{
+  background-color: #f5f5f5;
+  width: 210mm;
+  min-height: 297mm;
+  margin-left: auto;
+  margin-right: auto;
+}
