almost there - just gotta test the API results

--- a/app/views/bingo_games/review_candidates.html.erb
+++ b/app/views/bingo_games/review_candidates.html.erb
@@ -49,7 +49,7 @@
         <tr>
           <td><%= count += 1 %></td>
           <td>
-            <div hidden><%= candidate_term.filtered_consistent %></div>
+            <div hidden><%= candidate.filtered_consistent %></div>
             <%= candidate.term %>
           </td>
           <td>
