--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -27,7 +27,7 @@
         </td>
         <td width="10%" align="center" valign="center">&nbsp;</td>
         <td width="45%">
-          <%= f.input :end_date, as: :date, html5: true, label: t('projects.end_date_bl'),
+          <%= f.input :end_date, as: :date, html5: true, label: t('projects.end_date_lbl'),
             input_html: { value: date_field_in_tz( date: f.object.end_date, tz_str: ctz )} %>
         </td>
       </tr>
