--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Your Tasks</h1>
+<h1><%= t( :your_tasks ) %></h1>
 <% theme_code = get_theme_code
    anonymize = false %>
 <p><%= t 'home.greeting', name: @first_name %>,</br>
