fixed incorrect email address

--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -74,7 +74,7 @@
             <%= link_to t(:demo), demo_start_path,
                   :data => { :icon => "action", :role => "button" } %>
             <% end %>
-            <%= mail_to "support@CoLab.onlin", t(:support),
+            <%= mail_to "support@CoLab.online", t(:support),
                   :subject => "SAPA Support Request",
                   :data => { :icon => "mail", :role => "button" } %>
             <%= link_to t(:about), "http://www.PeerAssess.info",
