--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 
         <h1 id="title_head">
           <%= t :title %> <%= " : " + @title unless @title.nil? %>
-          <%= image_tag 'CoLab.png', size: '40x40', alt: 'CoLab Logo' %>
+          <%= image_tag 'CoLab_small.png', size: '32x32', alt: 'CoLab Logo' %>
         </h1>
         <%= react_component "Quote", {
           url: get_quote_path,
