--- a/app/views/candidate_lists/show.html.erb
+++ b/app/views/candidate_lists/show.html.erb
@@ -11,9 +11,17 @@
     </tr>
   </table>
   <h2><%= t 'candidate_lists.terms' %></h2>
+  <% if @candidate_list.bingo_game_id = -42 %>
+  <%= react_component "BingoBuilder", {
+    conceptsUrl: bingo_concepts_demo_path( -42 ),
+    boardUrl: board_for_game_demo_path( -42 ),
+    boardSaveUrl: update_board_demo_path( -42 ),
+    token: form_authenticity_token } %>
+  <% else %>
   <%= react_component "BingoBuilder", {
     conceptsUrl: bingo_concepts_path( @candidate_list.bingo_game_id ),
     boardUrl: board_for_game_path( @candidate_list.bingo_game_id ),
     boardSaveUrl: update_board_path( @candidate_list.bingo_game_id ),
     token: form_authenticity_token } %>
+  <% end %>
   <br>
