--- a/app/views/candidate_lists/show.html.erb
+++ b/app/views/candidate_lists/show.html.erb
@@ -13,12 +13,14 @@
   <h2><%= t 'candidate_lists.terms' %></h2>
   <% if -42 == @candidate_list.bingo_game_id %>
     <%= react_component "BingoBuilder", {
+    endDateStr: @candidate_list.bingo_game.end_date,
     conceptsUrl: bingo_concepts_demo_path( -42 ),
     boardUrl: board_for_game_demo_path( -42 ),
     boardSaveUrl: update_board_demo_path( -42 ),
     token: form_authenticity_token } %>
   <% else %>
     <%= react_component "BingoBuilder", {
+    endDateStr: @candidate_list.bingo_game.end_date,
     conceptsUrl: bingo_concepts_path( @candidate_list.bingo_game_id ),
     boardUrl: board_for_game_path( @candidate_list.bingo_game_id ),
     boardSaveUrl: update_board_path( @candidate_list.bingo_game_id ),
