--- a/app/views/home/demo_start.html.erb
+++ b/app/views/home/demo_start.html.erb
@@ -12,6 +12,47 @@
   </div>
   <div id="tasks" class="ui-body-<%= theme_code %> ui-content">
     <h3><%= t :task_view %></h3>
+    <h4><%= t :instructor_tasks %></h4>
+    <table data-role="table"
+          id="basicTable"
+          data-column-btn-theme"<%= theme_code %>"
+          data-column-popup-theme="<%= theme_code %>"
+          data-mode="columntoggle"
+          data-column-btn-theme="<%= theme_code %>"
+          data-column-btn-text="<%= t :column_select %>"
+          class="table-stroke ui-shadow table-stripe table-ui-responsive ">
+        <thead>
+          <tr>
+            <th><%= t :task_name %></th>
+            <th data-priority="1"><%= t 'home.task_type' %></th>
+            <th data-priority="0"><%= t :status %></th>
+            <th data-priority="1"><%= t :course_name %></th>
+            <th data-priority="0"><%= t :close_date %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @events.select{|task| task.instructor_task }.each do |task| %>
+            <tr>
+              <td data-priority="0">
+                <%= link_to task.name, task.task_link %><%= raw task.task_name_post %>
+              </td>
+              <td align="center" data-priority="1">
+                <%= task.type %>
+              </td>
+              <td align="center" data-priority="1"><%= task.status %>%</td>
+              <td data-priority="1"><%= task.course_name %></td>
+              <td data-priority="0">
+                <div hidden>
+                  <%= l in_tz( date: task.close_date ), format: :datestamp %>
+                </div>
+                <%= l in_tz( date: task.close_date ), format: :tz_clarity %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+  </br>
+    <h4><%= t :student_tasks %></h4>
     <table data-role="table"
           id="basicTable"
           data-column-btn-theme"<%= theme_code %>"
@@ -33,7 +74,7 @@
         </tr>
       </thead>
       <tbody>
-        <% @events.each do |event| %>
+        <% @events.select{|task| !task.instructor_task }.each do |event| %>
           <tr>
             <td>
               <%= link_to event.name, event.task_link %><%= raw event.task_name_post %>
