--- a/app/views/candidate_lists/list_stats.html.erb
+++ b/app/views/candidate_lists/list_stats.html.erb
@@ -2,7 +2,7 @@
      anonymize = false %>
 <table>
   <tr>
-    <th align="right"><%= t 'bingo_games.topic' %></th>
+    <th align="right"><%= t 'bingo_games.topic' %>:</th>
     <td><%= @candidate_list.bingo_game.topic %></td>
   </tr>
   <tr>
