--- a/app/assets/stylesheets/app_style.scss
+++ b/app/assets/stylesheets/app_style.scss
@@ -1,3 +1,7 @@
+@import '@fullcalendar/core/main.css';
+@import '@fullcalendar/daygrid/main.css';
+@import '@fullcalendar/list/main.css';
+
 .hidden{
   visibility:hidden;
 }
