--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -219,7 +219,8 @@
   <div id="month" class="ui-body-<%= theme_code %> ui-content">
   <h3><%= t :month_view %></h3>
   <%= react_component "CourseCalendar", {
-    dataUrl: 'http://www.csh.rit.edu',
+    dataUrl: course_cal_path( id: @course.id ),
+    token: form_authenticity_token,
   } %>
     <% activities = @course.experiences + @course.bingo_games + @course.projects %>
     <%= month_calendar attribute: :get_activity_begin, end_attribute: :end_date, events: activities do |date,activities| %>
