some lingering problems with experience lead times

--- a/app/views/experiences/_form.html.erb
+++ b/app/views/experiences/_form.html.erb
@@ -17,6 +17,7 @@
     <%= f.input :course_id, as: :hidden %>
     <%= f.input :name %>
     <%= f.input :active %>
+    <%= f.input :lead_time, label: t( 'experiences.lead_time_lbl' ) %>
     <table width="100%">
       <tr>
         <td width="45%">
