--- a/app/views/candidate_lists/show.html.erb
+++ b/app/views/candidate_lists/show.html.erb
@@ -7,7 +7,10 @@
   </tr>
   <tr>
     <th align="right"><%= t 'bingo_games.date' %>:</th>
-    <td><%= l @candidate_list.bingo_game.end_date, format: :tz_clarity %>
+    <td><%= l @candidate_list.bingo_game.end_date, format: :tz_clarity %></td>
+    </tr>
+    <th align="right"><%= t 'bingo_games.your_score' %>:</th>
+    <td><span id='performance'><%= @candidate_list.performance %></span></td>
     </tr>
   </table>
   <h2><%= t 'candidate_lists.terms' %></h2>
